design/v3/ARCHITECTURE.md
# prodev — 구조 (ARCHITECTURE)

요구는 `PRD.md`, 까닭은 `ADR.md`. 여기는 **무엇이 어디에 있고 어떻게 흐르나**만 적는다.

## 1. 한 장 그림

```
사내망 브라우저 (PL · 과제원)
        │ HTTP · SSE
        ▼
┌─ minidiscord 서버 (PL PC) ─────────────────────────────┐
│  방 둘: prodev-<과제> (본방) · prodev-<과제>/files                            │
│  SQLite: messages · attachments · room_bots(커서)                             │
└────────────┬───────────────────────────────┬──────────────┘
             │ WebSocket (게이트웨이)         │ 읽기 전용 (node:sqlite)
             ▼                               │
   채널 플러그인 (MCP: reply · fetch_history)│
             │                               │
             ▼                               ▼
┌─ 비서 세션 (Claude Code, 상주 안 함) ────────────────────┐
│  CLAUDE.md(포인터 + 열 줄)  스킬 12  에이전트 6(서브)      │
│  훅 3: session-start · pre-compact · pre-reply           │
│  스크립트: chat · count · index · find · peek · intake-copy · plot · setup · retro-cost │
│  봇 폴더: handoff(열린 실) · threads/ · rooms.json(방 이름표) · handoff-compact · memory │
└────────────┬──────────────────────────────────────────────┘
             ▼ git
┌─ 과제 저장소 (과제마다 하나) ─────────────────────────────┐
│  charter · schedule · journal/ · inbox/ · cards/ · wiki/ · research/ patent/ paper/ report/ · index │
└──────────────────────────────────────────────────────────┘
             ▼ 결재 뒤 승격
      knowledge/ (회사 지식, crew 의 것 그대로)
```

## 2. 방 묶음 — 과제 하나 = 방 둘 (ADR-022)

| 방 | 누가 말하나 | 무엇 | 비서의 태도 |
|---|---|---|---|
| `prodev-<과제>` (본방. 사람에겐 "오피스") | 전원 | 발의 · 일정 · 물음 · 결재 · 리서치 · 특허 · 논문 · 보고 — 말은 아무 데서나 | 답한다 |
| `prodev-<과제>/files` | 전원 · 비서 | 파일 올리기와 그 문답. 확정된 카드의 한 줄 공지 | 읽고 묻는다. 답한다 |

사람이 외우는 규칙은 한 줄이다: **"말은 아무 데서나, 파일은 files 에."**

비서는 **어느 방에서든 답한다.** 방을 이유로 답을 거부하거나 다른 방으로 보내지 않는다. 예외는 하나뿐이다 — 본방에 파일이 올라오면 "파일은 files 방에 올려주시면 거기서 읽고 여쭙겠습니다." 한 줄만 하고 **읽기 시작하지 않는다.** 이것이 유일한 안내다.

카드가 valid 가 되면 `files` 방에 **카드 한 줄 공지**(카드 번호 · 제목 · 경로)를 올린다. 눈으로 훑는 색인은 이 한 줄이고, 진짜 색인은 `index.js` 가 만드는 파일이다. 리서치 브리핑 · 특허 · 논문 · 보고 산출물은 **본방**에 올린다 (첨부 + 경로, ADR-020).

방 이름의 `/` 는 폴더에서 `-` 가 된다 (minidiscord 규칙). 접미어는 **영어만** 쓴다 (`files`). 비서는 접두어 `prodev-<과제>` 로 자기 과제의 방을 알아보지만, 과제 저장소는 방 이름이 아니라 settings `env` 의 `PRODEV_PROJECT` 로 찾는다 (cwd 로 유추하지 않는다, ADR-012).

## 3. 등장인물

| 누구 | 정체 | 어디 사나 |
|---|---|---|
| 비서 | Claude Code 세션 하나 + 채널 플러그인. 이름은 `prodev-<과제>-bot` 같은 기능명 (영어, ADR-024) | `bots/<이름>/` (토큰 · settings · 자기 상태) |
| 서브에이전트 여섯 | `.claude/agents/*.md`. 비서가 부른다. 서로 말하지 않는다 | 저장소 `.claude/agents/` |
| 알림 계정 | 사람 계정 하나(`prodev-notify`). 훅이 "정리 중" 같은 글을 올릴 때 쓴다 (봇 글은 게이트웨이만 보낼 수 있다) | minidiscord users |
| cron | PL PC. 08:00 브리핑 · 18:30 일지를 HTTP API 로 `@TO(비서)` | PL PC |

떼어 내는 규칙(ADR-001): 며칠 이어지고 · 사람이 그 담당과 직접 말하고 싶고 · 본방과 섞이면 불편할 때. 떼어 낸 봇은 같은 과제 저장소를 읽고 자기 갈래 폴더에만 쓴다. 첫 판에서는 안 뗀다.

## 4. 저장소 둘

### 4.1 prodev 저장소 (이 저장소)
```
prodev/
  README.md                        들머리 (하네스가 무엇이고 어떻게 도나)
  design/v2/                       이 판의 설계 문서 다섯 (PRD · ARCHITECTURE · ADR · TASKS · VERIFICATION)
  CLAUDE.md                        하네스 포인터(스킬이 쓴다) + 비서 지침 열 줄 (7절)
  .claude/agents/*.md              하네스 산출 (6)
  .claude/skills/*/SKILL.md        하네스 산출 (12 + 오케스트레이터 1)
  common/hooks/session-start.js    crew 것을 고침 (cwd 전제 제거 · 열린 실 싣기)
  common/hooks/pre-compact.js      새로
  common/hooks/pre-reply.js        새로
  common/settings.template.json    crew 것 + 배선
  common/statusline.sh             crew 그대로
  scripts/chat.js                  ../meta/prodev-review/plans/proto/chat.js 에서 (search 를 AND 로)
  scripts/count.js                 crew 그대로
  scripts/index.js  find.js  peek.js  intake-copy.js  plot.py     새로
  scripts/setup.js                 crew 것을 고침 (과제 폴더 · 봇 하나 · 방 둘 · cron · archive)
  scripts/retro-cost.js            crew 것을 봇 하나로
  scripts/replay.js                검수용. 사람 역할을 API 로 재생 (VERIFICATION 4절)
  bots/<이름>/                     setup 이 만든다. git 제외
  test/                            스크립트·훅 단위 시험 + fixtures/
```

### 4.2 과제 저장소 (과제마다 하나, `projects/<과제>/` 또는 사람이 정한 자리)
```
<과제>/
  charter.md                  헌장. PL 이름이 여기 있다 (결재 대조의 기준)
  schedule.md                 일정. 표 하나: 항목 · 기한 · 담당 · 상태 · 바뀐 날 · 왜
  house.md                    이 과제에서 이 사람과 일하는 방식. **사실이 아니라 규칙**이다.
                              훅이 여덟째로 싣는다 · 상한 50줄 (ADR-032)
  journal/YYYY-MM-DD.md       일지. 결정 · 미해결 · 다음 할 일 · 올라온 것 · 카드 없는 첨부
  inbox/YYYYMMDD-<slug>/      실험 한 건의 원본 묶음 (불변) + files.md (사이드카) + reading.md (data-reader 전수)
  cards/E-0001.md             실험 카드
  cards/R-0001.md             리서치 카드
  cards/D-0001.md             결정 카드 (결재·판정·마일스톤 변경)
  cards/N-0001.md             메모 카드 (사진·회의 메모, 위키 안 건드림)
  wiki/<topic>.md             주제 페이지
  analysis/YYYYMMDD-<slug>/   분석 한 건 (run.py 돌린 코드 · run.md 대본). inbox/ 와 같은 꼴이다 —
                              받은 것의 짝이 만든 것이라 묶는 법도 같다. 그림은 tmp/ (코드에서 다시 나온다)
  templates/<이름>.md         가르친 양식. 머리에 언제부터 · 누가 · 원본 경로
  research/ patent/ paper/ report/
  index.md · index.json       기계 생성
  tmp/                        그림·임시 (gitignore). 봇 첨부 뿌리 안이어야 첨부가 된다
  .gitignore                  tmp/ 한 줄. setup.js 가 만든다 (ADR-032)
```

## 5. 2nd brain — 층 다섯

| 층 | 무엇 | 누가 만드나 | 언제 |
|---|---|---|---|
| 0 | 원본 + 사이드카 (`inbox/`) | intake-copy.js + 문답 | 파일이 올 때. 불변, 같은 이름은 `.v2` |
| 1 | 카드 (`cards/`) | 들이기 문답의 결과 | "확정" 때 valid. 그 전엔 draft |
| 2 | 위키 (`wiki/`) | 비서 | 카드가 valid 될 때 즉시, 걸리는 페이지만 (ADR-004) |
| 색인 | `index.md` · `index.json` | `index.js` | 카드·위키가 바뀔 때마다. 손으로 안 쓴다 |
| 대화 | minidiscord DB | 서버 | 항상. `chat.js` 로 읽는다 |

헌장(`charter.md`)과 일정(`schedule.md`)은 이 표에 없다. 2nd brain 이 **자료에서 지어 올리는 것**인 데 반해 그 둘은 사람이 정한 것을 적어 둔 **과제 문서**이고, 만드는 것도 `charter` · `schedule` 스킬이기 때문이다. 다만 **찾을 때는 같이 뒤진다** — 5.3 의 4층이 그 자리다 (ADR-026).

### 5.1 카드 머리말 (실험 카드)
```
---
id: E-0007
kind: experiment              experiment | research | decision | note
title: CH-3B 샤워헤드 교체 후 수율 (08-27~09-03)
date: 2026-09-03              측정일. 올린 날이 아니다
who: 김과제                    봉투 sender
room: prodev-수율개선/files
source_msgs: [405, 409]       첨부가 올라온 글 번호 전부
confirmed_at: 412             "확정" 글 번호. 훅이 DB 로 검증한다
files: [inbox/20260903-ch3b-showerhead/yield.csv, inbox/20260903-ch3b-showerhead/photo1.jpg]
conditions: {장비: CH-3B, 공급사: BSTech, 로트: 14, 레시피: R-12, 부품: SH2200-B-0412}
                              가르는 축 넷(장비 · 공급사 · 로트 · 레시피)은 자료에 있으면 반드시 적는다 (ADR-028)
results: {수율_전: 90.10, 수율_후: 92.53, 단위: "%"}
aliases: [샤워헤드교체, showerhead-swap, CH3B수율, SH2200, 샤워해드]
                              정식 부품명 · 현장 말 · 영문 · 줄임말 · 흔한 오타. 1층이 걸리는 유일한 길이다
tags: [수율, 샤워헤드, CH-3B]
related: [E-0005, R-0002]
status: draft                 draft | valid | void
supersedes: none
---
## 한 줄
## 조건 (표)
## 결과 (갈래별 요약 표 + 원본 실마리 한 줄. 아래 규격)
## 문답에서 확정한 것 (Q → A, 각각 #message_id)
## 한계 · 못 확인한 것 (reading.md 의 이상 자리 전부)
## 관련 카드
```
`conditions` · `results` 는 자유 키값. 위키 페이지가 "이 과제의 조건 키"를 유지한다. 번호는 `index.js next E` 가 준다.

**`## 결과` 절 규격 (ADR-028 · ADR-030)** — 갈래마다 **깊이를 다르게** 싣는다. 요약 표는 수를 주지 개체를 주지 않기 때문이다.

| 갈래 | 싣는 것 |
|---|---|
| **과제가 쫓는 갈래** — 카드 `tags` 와 헌장 `## 목적` · `## 목표` 에 **함께** 나오는 것 | **개체별 표** |
| **규격을 벗어난 개체** | **개체별 표** |
| 나머지 갈래 | **갈래별 요약 표** + **원본 실마리** |

```
## 결과

SH-2200 (과제가 쫓는 부품) — 개체별

| 일련번호 | 두께(mm) | 판정 | 장착 |
|---|---|---|---|
| SH2200-0411 | 1.02 | 이내 | CH-2B |
| SH2200-0412 | 1.19 | 초과 | 반품 |
| …                                        (여덟 행 전부)

| 공급사 | 전수 | 규격 이내 | 규격 초과 |
|---|---|---|---|
| BSTech | 21 | 18 | 3 |
| 한성정밀 | 13 | 11 | 2 |

| 장비 | 전수 | 규격 이내 | 규격 초과 |
|---|---|---|---|
| CH-2B | 16 | 13 | 3 |
| CH-3B | 18 | 16 | 2 |

전체 표: inbox/20260909-part-incoming/inspection.csv (열 A~F · 34행) · files.md
```

- **개체별 표**는 개체 하나가 한 행이다. 칸은 개체를 가리키는 값(일련번호 · 로트 · 원본 행 번호) · 잰 값 · 판정 · 그 개체가 어떻게 됐는지.
- **갈래별 요약 표**는 `conditions` 의 가르는 축마다 하나씩. 물음은 언제나 "무엇별로" 들어온다 ("BSTech 것만" · "CH-2B 는" · "규격 이내인 것은 몇 개였지").
- **원본 실마리**는 한 줄 — 전체 표가 어느 파일의 몇 행인지. 나머지 갈래의 정상 행을 카드에 베끼지 않는다.
- **상한** — 개체가 **20을 넘는** 갈래는 개체별 표 대신 ① 규격 밖 전부 ② 규격 경계에 가까운 것 다섯 ③ 나머지는 수와 범위로. 카드가 못 읽을 만큼 길어지면 그것도 카드가 일을 안 한 것이다.
- 쫓는 갈래가 헷갈리면 사람에게 묻되 **들이기 문답의 물음 셋 안에서** 묻는다 (6.1 의 걸음 넷). 물음을 늘려 풀지 않는다.
- 이상 자리만 실은 카드는 이상한 것만 답하고, 수만 실은 카드는 "몇 개냐"에만 답한다. 어느 쪽이든 봇이 원본 csv 를 직접 읽고, 카드가 일을 안 한 것이다.

### 5.2 위키 페이지
```
# <topic>
## 지금 아는 것        문장마다 [E-0007]. 번호 없는 문장 금지
## 근거 카드            표
## 모르는 것 · 열린 질문
## 이 과제의 조건 키     키 · 뜻 · 단위
## 이력                 날짜 · 어느 카드가 무엇을 바꿨나
```
200줄을 넘으면 하위 주제로. 새 주제는 사람에게 이름을 묻는다.

### 5.3 찾기 (`find.js`, 순서를 스크립트에 못 박는다) — 층 여섯
```
1 index.json 의 title · aliases · tags     → 카드 경로
2 cards/*.md 본문                          → 카드 경로 + 행
3 wiki/*.md                                → 페이지 + 행
4 charter.md 절 · schedule.md 표 행         → charter.md#<절 이름> · schedule.md#<첫 칸>
5 inbox/*/files.md                         → 사이드카 경로 + 행
6 chat.js search (AND)                     → #message_id (최근 10건을 골라 오래된 순으로)
```
NFC 정규화 · 조사 떼기(을/를/이/가/은/는/의/에/에서/로/으로/와/과/도) · 대소문자·하이픈·공백 접기 · void 는 supersedes 따라감.

**4층 과제 문서 (ADR-026 · ADR-027)** 4.2 의 `charter.md` · `schedule.md` 를 본다. 예산 · 중간 점검 · 판정 기준처럼 헌장과 일정에 또박또박 적혀 있는 것이 검색 층에 아예 없어서 답하지 못하던 자리다.
- 자리는 **위키 뒤 · inbox 앞**이다. 위키 뒤면 1~3층(카드·위키)을 구조적으로 가로챌 수 없다.
- 맞대는 알갱이는 **파일이 아니라 절·행**이다. `charter.md` 는 머리말(첫 `---` 블록) 한 덩이 + `## ` 절마다, `schedule.md` 는 표 행마다. 파일을 통째로 맞대면 서로 다른 절의 낱말이 함께 걸려 거짓 양성이 난다.
- **잘린 덩이마다 경로가 다르다** — `charter.md#<절 이름>` · `schedule.md#<첫 칸>`. 결과는 경로로 묶이므로, 덩이 여럿이 같은 경로를 쓰면 걸린 것이 첫 하나만 남고 조용히 버려진다 (ADR-027).
- 일지(`journal/`)는 이 층에 **넣지 않는다.** 까닭은 ADR-026.
- 파일이 없으면 조용히 건너뛴다 (과제 초기에는 둘 다 없다).

답한 층을 `bots/<이름>/find.log` 에 남긴다 (읽힘 지표). 한 줄의 칸은 **여섯**이다 — `<when>` · `<층 번호>` · `<층 이름>` · `<건수>` · `<맨 위 경로>` · `<물음>`. 번호만 남기면 층이 밀릴 때 옛 로그의 `4` 와 새 로그의 `4` 가 다른 뜻이 되어 주간 계측이 조용히 어긋난다.

## 6. 흐름 여섯

### 6.1 들이기 (S2)
```
과제원이 files 방에 파일 + @TO ──▶ intake-copy.js (inbox 로, .v2, SHA-256) ──▶ peek.js (행·열·5행)
   ──▶ 큰 파일이면 data-reader (백그라운드) → reading.md 전수 + 20줄
   ──▶ "이렇게 읽었습니다" 표 + 이상 자리 + 질문 ≤3 (그림이 낫다면 plot.py / 잘라서 첨부)
   ──▶ 과제원 답 · 고침 (threads/<방>-E-0007.md 에 남은 질문)
   ──▶ "확정" ──▶ 카드 valid → 위키 갱신 → index.js → files 방에 카드 공지 한 줄 → 커밋
                    ▲ pre-reply 훅이 [카드] 표식을 보고 DB 로 확정 다섯 조건을 본다. 아니면 막는다
```

### 6.2 물음 (S0 · F4)
```
@TO 물음 ──▶ 분기표: 물음표 또는 어디/언제/뭐라/얼마 ──▶ find.js --limit 10 ──▶ 출처 붙여 답 (900자·10줄, 훅이 센다)
```

### 6.3 리서치 · 특허 · 논문 · 보고 (S3 · S5~S7)
```
요청 ──▶ find 먼저 ──▶ "물음은 이것, 진행할까요" ──▶ 허락
   ──▶ 백그라운드 서브에이전트 (researcher / patent-analyst / paper-writer / report-writer) → 파일
   ──▶ reviewer (다른 문맥) → 통과/불통과 파일
   ──▶ 다음 턴에 방에 브리핑 10줄 ──▶ 대화 ──▶ 카드 R / 산출물 ──▶ 결재 (PL 만, 훅이 작성자 대조)
```

### 6.4 분석 · DOE (ADR-034)

`intake` 가 **받은 것**을 적는다면 분석은 **만든 것**을 남긴다. 그래서 자리도 짝이다 —
`inbox/YYYYMMDD-<slug>/` 옆에 `analysis/YYYYMMDD-<slug>/`.

```
"분석해 줘" ──▶ 먼저 찾는다 (find.js · ls analysis/)
   ├─ 같은 물음이 이미 있다 ──▶ **앞 카드를 댄다.** 새 폴더를 만들지 않는다
   ├─ 자료만 늘었다        ──▶ 있는 run.py 를 **그대로 다시 돌린다**
   └─ 새 물음
        ──▶ ① 무엇을 알고 싶은지 한 줄 확인
        ──▶ ② **모형 후보 두셋을 근거와 함께 → 사람이 고른다** (이 흐름의 유일한 관문)
        ──▶ ③ analysis/<날짜>-<slug>/run.py (입력은 inbox 경로로 박는다 · seed 고정 · 그림은 tmp/)
        ──▶ ④ run.md 여섯 칸
        ──▶ ⑤ **카드 하나** (결론 한 줄 · analysis 경로 · 쓴 모형과 임계값) ──▶ index.js ──▶ 커밋
```

**카드는 선택이 아니다.** 찾기 층 여섯(5.3)은 코드에 고정이고 `analysis/` 는 그 어느 층도 아니다.
카드(2층)에 결론과 경로가 없으면 이 분석은 다음 주에 없는 것이 된다.

**`run.md` 여섯 칸** — 측정법이 무엇이든 같다. 달라지는 것은 2 · 3 뿐이다.

```
## 1. 무엇을 알고 싶은가        사람에게 한 줄 확인
## 2. 어떤 가정을 깔았나        모형 · 임계값 · 정규성
## 3. 코드                      run.py · **seed · python 판 · 꾸러미 판**
## 4. 숫자 + 검증치             잔차 · χ² · 신뢰구간, 또는 경계 겹친 그림
## 5. 물리적 해석 (추정)        근거: 4번의 어느 숫자
## 6. 이 해석을 뒤집을 수 있는 것   무엇을 더 재면 틀린 것으로 드러나는가
```

3번이 없으면 **재현성 검수가 성립하지 않는다** — 반년 뒤 숫자가 달라졌을 때 봇이 틀린 것인지
라이브러리가 바뀐 것인지 가를 수 없다. 2번과 6번이 비면 틀렸을 때 어디서 틀렸는지 알 수 없다.

**숫자는 스크립트만, 해석은 자유롭게.** 카드와 4번 칸의 수치는 스크립트 출력에서 온 것이어야 한다
(p 가 0.04 냐 0.06 이냐가 양산 결정을 가른다). 해석은 (1) 어느 숫자에서 나왔는지 대고 (2) 확인/추정을 표시한다.

**사람 눈으로만 확인되는 것**(이미지에서 입자 · 기공 · 두께 재기)은 **원본 위에 검출 결과를 겹친 그림**을 반드시 같이 낸다.

### 6.5 굳는 길 — 입구 둘, 문 하나 (ADR-035)

봇이 만들어 낸 것이 굳어서 다음에 다시 쓰이는 길이다. **진화 장치의 본체가 여기다.**

| | 지시형 | 관찰형 |
|---|---|---|
| 발동 | 사람이 **"앞으로"** 라고 말한다 | 봇이 반복을 알아챈다 |
| 속도 | 즉시 | 느리다 (쌓여야 신호가 난다) |
| 승인 | **이미 끝난 상태로 도착** | 받아야 한다 |
| 진짜 위험 | **범위** | 검증 안 된 것이 굳는 것 |

```
지시형: "앞으로 …"  ──▶ **범위를 한 줄 되묻는다** ("회의록만인가요, PL 께 나가는 문서 전부인가요")
                     ──▶ 자리에 적는다 ──▶ 머리에 언제부터 · 누가 · 무엇을 보고
관찰형: 일지 ## 되풀이된 말 에 한 줄씩 (세지 않는다) ──▶ retro 가 읽는다 ──▶ 제안 ──▶ 사람이 "앞으로"
```

**문은 하나다.** 두 입구 어느 쪽으로 들어와도 사는 자리는 같다.

| 굳는 것 | 사는 자리 | 언제 읽히나 |
|---|---|---|
| **규칙** (문체 · 어휘 · 하지 말 것) | `house.md` | **모든 답변** — 훅이 여덟째로 싣는다 (ADR-032) |
| **양식** (보고 골격 · 절 제목 · 길이) | `templates/<이름>.md` | 보고서 쓸 때 — `report` 가 읽는다 |
| **방법** (분석 절차 · 배치 만드는 법) | `analysis/methods/<이름>.md` | 분석할 때 — `analysis` 가 읽는다 |
| **별칭** (현장 말 ↔ 자료의 말) | 카드의 `aliases` | 찾을 때 — 1층 |

**경계는 "되돌릴 수 있는가" 로 긋는다.** 사실(카드 · 위키 · 일지)은 틀려도 다음 것이 덮으니 자동으로 는다.
규칙은 한 번 들어가면 그 뒤 모든 판에 영구히 작용하니 **사람이 세운다.**

**"이번에는" 을 "앞으로는" 으로 듣지 않는다.** 한 번의 예외가 영구 규칙이 되면 규약이 금방 쓰레기로 차고,
서로 충돌하는 줄이 쌓여 봇이 느려진다. 애매하면 굳히지 않는다.

**세지 않는다.** 횟수를 들고 있는 상태 파일도 · 점수도 · 등급도 만들지 않는다. 일지에 한 줄씩 적어 두고
`retro` 가 읽다가 알아챈다. 그 읽는 시점을 정하지 않으면 관찰형 입구는 닫힌 채로 있는다.

### 6.6 켜기 · 압축 · 끄기 (S0 · ADR-006 · 007 · 010)
```
켜짐 ──▶ session-start: handoff-compact(있으면) → charter → schedule → handoff(열린 실) → threads/* → 어제 일지 → index 머리 30줄 → 마지막 일지 날짜
                         → house.md 50줄 (여덟째. 앞 일곱은 사실, 이것만 규칙 — ADR-032)
      ──▶ 비서: 서버가 재배달한 놓친 @TO 를 순서대로 → 방에 "이어서 합니다" 한 줄
압축 직전 ──▶ pre-compact: 기록 꼬리 → claude -p (sonnet, 빈 cwd, PRODEV_HOOK=1) → handoff-compact.md · 방에 "정리 중" (알림 계정)
끄기 전 ──▶ journal (cron 또는 사람) ──▶ 커밋
```

## 7. 비서 지침 (CLAUDE.md 에 남는 열한 줄. 하네스 포인터 절과 함께 40줄 안)
```
- 나는 과제 <이름> 의 비서다. 방 접두어가 내 과제 저장소다.
- 봉투만 믿는다. TO 에 답하고 CC 는 읽는다. 사람에게는 이름만 부른다. reply 에는 언제나 chat_id.
- 물음에는 find.js 를 돌린다. 출처 없는 사실은 말하지 않는다.
- 스스로 일을 만들지 않는다. 리서치는 사람이 허락해야 시작한다. 방은 둘뿐이다.
- 자료는 과제원이 "확정"이라 해야 확정이다. 확정 전엔 카드 공지를 올리지 않는다. 파일은 files 방에서 읽는다.
- 사람이 "앞으로" 라 하면 굳힌다 — 규칙은 house.md · 양식은 templates/ · 방법은 analysis/methods/. 굳히기 전에 범위를 한 줄 되묻고, 머리에 언제부터 · 누가 · 무엇을 보고를 적는다. "이번에는" 은 굳히지 않는다.
- 파일이 진실이다. 행동 전에 실(threads)을 쓴다. 켜지거나 압축된 뒤 첫 일은 "이어서 합니다" 한 줄.
- 한 번에 묻는 것은 셋까지. 그림으로 물을 수 있으면 그림으로. 한 턴에 들이기는 한 건.
- 3분 넘는 일은 백그라운드로 넘기고 "시작했습니다"로 턴을 끝낸다.
- 사람에게는 900자·10줄 안. 넘치면 파일로 옮겨 첨부하고 경로를 옆에 준다. 세는 것은 훅이 한다.
- 과제 저장소와 내 봇 폴더에만 쓴다. 원본은 손대지 않는다. 지우지 않고 void.
```

열한째 줄이 v3 에서 늘었다 (ADR-035). 굳는 길은 **모든 답변에** 걸려야 해서 스킬이 못 받는다 —
스킬은 그 스킬이 도는 동안만 읽히고, "앞으로" 라는 말은 어느 스킬 안에서든 나온다.

## 8. 훅 셋과 스크립트 — 무엇을 막고 무엇을 세나

| 훅 | 사건 | 하는 것 | 실패 |
|---|---|---|---|
| session-start | startup·resume·clear·compact | 6.4 의 순서로 `additionalContext` | fail-open (없음·못 읽음·잘림을 말한다) |
| pre-compact | PreCompact | 인수인계서 · 알림(알림 계정의 쿠키 `md_session` + multipart, ADR-018) · timeout 180 | fail-open |
| pre-reply | PreToolUse `mcp__minidiscord-channel__reply` | `chat_id` 없음 → 막음 · 분량(count.js 900자·10줄) → 막음 · **`[카드]` 표식**이면 확정 다섯 조건 → 막음 · **`[발송]` 표식**이면 결재 글 작성자 = charter PL → 막음 · `index.json.errors>0` → 막음 | **exit 2 + 이유 한 줄** (봇이 읽고 고친다) |

관문의 **방아쇠는 방이 아니라 표식**이다 (ADR-022). 훅은 봉투를 벗긴 본문의 **첫 줄**만 본다. 첫 줄이 `[카드]` 로 시작하면 카드 공지로 보고 관문에 세운다 — 그 안에서 `^\[카드\]\s+(E\|R\|D\|N)-\d{4}\s+·` 꼴인지 보고, 아니면 "번호 없는 공지는 색인 줄이 못 된다"로 막는다. 첫 줄이 `[발송]` 로 시작하면 결재를 본다. 표식이 없는 글에는 이 둘이 안 걸리므로, 봇이 평소 답에서 카드 번호를 입에 올리는 것은 막히지 않는다. 방을 모르는 `chat_id` 여도 표식이 있으면 관문이 걸린다.

pre-reply 의 확정 다섯 조건 (ADR-008): `confirmed_at` 글이 ① `author_type='user'` ② 같은 과제의 `/files` 방 ③ **봉투(`@TO(…)` · `@CC(…)`)를 벗긴** 본문이 `^(확정|맞다|맞습니다|그대로|OK)\b` ④ `source_msgs` 전부보다 뒤이고 직전 봇 글에 같은 카드 번호 ⑤ 카드 `status: valid`. DB 를 못 열면 카드 공지와 발송은 fail-closed(확정·결재를 확인할 수 없다) — 표식이 방아쇠라 "방 갈래를 모르면 안 막는다"는 예외는 없어졌다.

| 스크립트 | 입력 → 출력 | 누가 부르나 |
|---|---|---|
| chat.js | rooms / search(AND) / around / since / tail / show | 비서 · find.js · pre-reply · journal · 검수 |
| count.js | 파일 또는 stdin → `(N자 · N줄 · 최장 N어절)` | pre-reply |
| index.js | cards·wiki·inbox 머리말 → index.md · index.json (`errors`) · `next E` | intake · 위키 갱신 · pre-reply |
| find.js | 낱말 → 층 · 경로/번호 · status, find.log | 비서 |
| peek.js | 파일 → 행 수 · 열 이름 · 5행 · 형식 | intake |
| intake-copy.js | 첨부 경로 → inbox 폴더 · `.v2` · SHA-256 · files.md 뼈대 | intake |
| plot.py | csv 열 → `<과제>/tmp/*.png` | intake |
| setup.js | 과제 폴더(없으면 만들고 git init, ADR-023) · 봇 등록 · settings 생성 · 방 둘 · 봇 참여 · cron · archive | 사람 |
| retro-cost.js | 세션 기록 → 값 · 승인 수 · `--record` | meta |
| replay.js | 대본(JSON) → API 로 사람 글 재생 · 봇 답 수집 · 기록 | meta (검수) |

## 9. 서브에이전트 여섯 (`.claude/agents/`)

| 에이전트 | 하는 일 | 돌려주는 것 | 공통 규칙 |
|---|---|---|---|
| data-reader | 큰 파일 전수 읽기 | `reading.md` 전수 + 20줄 + 경로 | 파일에 전부, 문맥엔 요약. 커밋 안 함. 그림·임시는 tmp/ |
| researcher | 문헌·규격·웹. 출처 없는 문장 금지 | 결론 · 출처 · 못 확인한 것 · 경로 | 〃 |
| reviewer | 다른 문맥의 검토. 숫자 다시 세기, 출처 대조 | 통과/불통과/검증 불가 · 이유 3줄 · 못 본 범위 | 〃 |
| patent-analyst | 선행 · 청구 후보 | 선행 목록 · 차이 · 위험 | 〃 |
| paper-writer | 절 초안 + 근거 카드 | 경로 · 근거 카드 · 빈 자리 | 〃 |
| report-writer | 포맷 칸 채우기 | 경로 · 출처 없는 숫자 목록 | 〃 |

## 10. 스킬 열넷 + 오케스트레이터 (`.claude/skills/`)

`charter` · `intake` · `find` · `research` · **`analysis`** · `schedule` · `brief` · `journal` · **`retro`** · `patent` · `paper` · `report` · `review` · `close`, 그리고 `prodev-orchestrator`(봉투 → 스킬 분기표). 트리거 말·입력·산출·관문·부르는 것은 `../meta/prodev-review/plans/2026-09-10-prodev-design.md` (B 표)을 따른다. 하네스 스킬이 만들고, 검수는 트리거 검증(should/should-not 각 10)으로 한다.

v3 에서 둘이 늘었다 (ADR-034 · 036). 둘 다 **판별 넷**을 통과해서 생긴 것이다 (ADR-037):

| 스킬 | 왜 스킬인가 | 왜 md 한 장으로는 안 되나 |
|---|---|---|
| `analysis` | **타이밍** — "분석해 줘" 를 받을 자리가 없었다. 스킬 열둘 어디에도 안 걸렸다 | 규격을 설계 문서에만 적으면 그 시점에 아무도 안 읽는다 |
| `retro` | **타이밍** — 일지에 쌓인 것을 **읽는 시점**이 없었다 | 읽는 시점을 정하지 않으면 관찰형 진화가 닫힌 채로 있는다 |

**스킬 본체는 고정, 방법과 양식은 데이터다.** `analysis` 는 t 검정·Cpk·DOE 를 미리 스크립트로 갖지 않는다 —
기계가 스스로 확인하는 계산(잔차 · χ² · p)은 봇이 즉석에서 짜고, 되풀이돼 굳은 것만 `analysis/methods/` 로 간다.
**측정법마다 템플릿을 만들지 않는다.** 측정법은 수십 가지고 과제가 바뀌면 또 나온다. 그리고
**틀린 템플릿이 즉석 코드보다 위험하다** — 즉석 코드에는 "방금 짠 것" 이라는 경계심이 붙지만 템플릿에는 안 붙는다.

## 11. 바깥과의 경계

- minidiscord 서버 코드는 손대지 않는다. 설정 한 줄 `MINIDISCORD_BOT_FILES_DIR=<과제 저장소들의 부모>`. 서버 수정이 필요해지면 그 저장소에 카드로 (웹 검색창 · OD-9).
- 서버에 글을 올리는 길은 하나다: 쿠키 `md_session` + multipart. Bearer 토큰도 JSON 본문도 서버가 받지 않는다 (401 · 406, 2026-09-10 시험 서버로 확인 — ADR-018). cron 두 줄과 훅의 알림은 알림 계정의 세션 쿠키(`PRODEV_NOTIFY_TOKEN`)로 사람과 같은 길로 올린다.
- knowledge/ (회사 지식)는 crew 의 것을 그대로. `close` 에서 PL 결재로만 승격.
- 봇 PC 는 인터넷이 된다 (사람 확인). WebSearch·WebFetch 허용.
